--- a/demo/src/main/resources/com/assignment/borrowingArrow.fxml
+++ b/demo/src/main/resources/com/assignment/borrowingArrow.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.BorrowingArrowController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.BorrowingArrowController">
    <children>
-      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="11.0">
          <children>
-            <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="65.0" prefWidth="240.0" text="Hierachy of Wu Kingdom" textAlignment="CENTER" textFill="#46252a" wrapText="true">
+            <Button alignment="CENTER" focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="65.0" prefWidth="215.0" text="Hierachy of Wu Kingdom" textAlignment="CENTER" textFill="#46252a" wrapText="true">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="65.0" prefWidth="240.0" text="Soldier Arrangement" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="65.0" prefWidth="215.0" text="Soldier Arrangement" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
@@ -26,114 +26,114 @@
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="65.0" prefWidth="240.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER" textFill="#46252a" wrapText="true">
+            <Button alignment="CENTER" defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="65.0" prefWidth="215.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="65.0" prefWidth="240.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="65.0" prefWidth="215.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="65.0" prefWidth="240.0" text="Food Harvesting" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="65.0" prefWidth="215.0" text="Food Harvesting" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="65.0" prefWidth="240.0" text="Text Converter" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="65.0" prefWidth="215.0" text="Text Converter" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="65.0" prefWidth="240.0" text="Red Cliff on Fire" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="65.0" prefWidth="215.0" text="Red Cliff on Fire" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="65.0" prefWidth="240.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="65.0" prefWidth="215.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
          </children>
       </VBox>
-      <AnchorPane layoutX="300.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="980.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="300.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="980.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="3.0" layoutY="70.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="910.0" text="Enter number of Enter number of straw men for the directions. Number of straw men in one direction must be 0-100." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="70.0">
+            <Label layoutX="10.0" layoutY="77.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="910.0" text="Enter number of Enter number of straw men for the directions. Number of straw men in one direction must be 0-100." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="77.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="frontTextField" layoutX="113.0" layoutY="143.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="143.0">
+            <TextField fx:id="frontTextField" layoutX="113.0" layoutY="146.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="146.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <Label fx:id="frontLabel" alignment="CENTER_RIGHT" layoutX="43.0" layoutY="148.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Front: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="148.0">
+            <Label fx:id="frontLabel" alignment="CENTER_RIGHT" layoutX="50.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Front: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="151.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="leftLabel" alignment="CENTER_RIGHT" layoutX="43.0" layoutY="193.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Left: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="193.0">
+            <Label fx:id="leftLabel" alignment="CENTER_RIGHT" layoutX="50.0" layoutY="204.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Left: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="204.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="rightLabel" alignment="CENTER_RIGHT" layoutX="43.0" layoutY="238.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Right: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="238.0">
+            <Label fx:id="rightLabel" alignment="CENTER_RIGHT" layoutX="50.0" layoutY="256.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Right: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="256.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="backLabel" alignment="CENTER_RIGHT" layoutX="43.0" layoutY="283.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Back: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="283.0">
+            <Label fx:id="backLabel" alignment="CENTER_RIGHT" layoutX="50.0" layoutY="306.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="60.0" text="Back: " textFill="#46252a" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="306.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="leftTextField" layoutX="113.0" layoutY="188.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="188.0">
+            <TextField fx:id="leftTextField" layoutX="113.0" layoutY="199.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="199.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="backTextField" layoutX="113.0" layoutY="278.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="278.0">
+            <TextField fx:id="backTextField" layoutX="113.0" layoutY="301.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="301.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <TextField fx:id="rightTextField" layoutX="113.0" layoutY="233.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="233.0">
+            <TextField fx:id="rightTextField" layoutX="113.0" layoutY="251.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="150.0" promptText="0 - 100" AnchorPane.topAnchor="251.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <Button fx:id="submitButton" layoutX="749.0" layoutY="621.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="72.0" prefWidth="180.0" text="Submit" textFill="#46252a" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="621.0">
+            <Button fx:id="submitButton" layoutX="838.0" layoutY="571.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="60.0" prefWidth="120.0" text="Submit" textFill="#46252a" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="571.0">
                <font>
-                  <Font name="System Bold" size="24.0" />
+                  <Font name="Dosis ExtraBold" size="24.0" />
                </font>
             </Button>
-            <Label fx:id="borrowingArrowLabel" alignment="TOP_LEFT" contentDisplay="CENTER" layoutY="483.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="138.0" prefWidth="743.0" text="Boat direction: &#10;Arrow received:&#10;Total:" textFill="#006284" wrapText="true" AnchorPane.leftAnchor="10.0">
+            <Label fx:id="borrowingArrowLabel" alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="9.0" layoutY="516.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="132.0" prefWidth="743.0" text="Boat direction: &#10;Arrow received:&#10;Total:" textFill="#006284" wrapText="true" AnchorPane.leftAnchor="9.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label fx:id="arrowLabel" alignment="CENTER_RIGHT" layoutX="40.0" layoutY="312.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="70.0" text="Arrow: " AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="410.0">
+            <Label fx:id="arrowLabel" alignment="CENTER_RIGHT" layoutX="40.0" layoutY="435.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="70.0" text="Arrow: " AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="435.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="arrowTextField" layoutX="111.0" layoutY="408.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="409.0" promptText="2000,1600,1500,..." AnchorPane.leftAnchor="111.0" AnchorPane.topAnchor="408.0">
+            <TextField fx:id="arrowTextField" layoutX="111.0" layoutY="430.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="409.0" promptText="2000,1600,1500,..." AnchorPane.leftAnchor="111.0" AnchorPane.topAnchor="430.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <Label layoutY="334.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="936.0" text="Enter the number of arrows shot in each wave. The number of arrows shot should be in decreasing order. Please enter the arrows in the format: 2000,1500,1000,..." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0">
+            <Label layoutX="10.0" layoutY="350.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="65.0" prefWidth="936.0" text="Enter the number of arrows shot in each wave. The number of arrows shot should be in decreasing order. Please enter the arrows in the format: 2000,1500,1000,..." textFill="#46252a" wrapText="true" AnchorPane.leftAnchor="10.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Separator layoutY="464.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="960.0" />
-            <Label fx:id="title" layoutY="11.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="77.0" prefWidth="762.0" text="Borrowing Arrow with Straw Boats" textFill="#46252a" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Separator layoutX="-2.0" layoutY="490.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="960.0" />
+            <Label fx:id="title" layoutY="11.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="84.0" prefWidth="762.0" text="Borrowing Arrow with Straw Boats" textFill="#46252a" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
-                  <Font name="System Bold" size="30.0" />
+                  <Font name="Gill Sans Ultra Bold" size="30.0" />
                </font>
                <padding>
                   <Insets bottom="20.0" top="20.0" />
