--- a/demo/src/main/resources/com/assignment/textConverter.fxml
+++ b/demo/src/main/resources/com/assignment/textConverter.fxml
@@ -12,16 +12,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.TextConverterController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.TextConverterController">
    <children>
-      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox fx:id="buttonVBox" alignment="CENTER" layoutX="-2.0" layoutY="-3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="300.0" spacing="20.0" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="11.0">
          <children>
-            <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="65.0" prefWidth="240.0" text="Hierachy of Wu Kingdom" textAlignment="CENTER" textFill="#46252a" wrapText="true">
+            <Button focusTraversable="false" mnemonicParsing="false" onAction="#switchToHierarchyScene" prefHeight="65.0" prefWidth="215.0" text="Hierachy of Wu Kingdom" textAlignment="CENTER" textFill="#46252a" wrapText="true">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="65.0" prefWidth="240.0" text="Soldier Arrangement" textFill="#46252a">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#switchToSoldierArrangement" prefHeight="65.0" prefWidth="215.0" text="Soldier Arrangement" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
@@ -29,43 +29,43 @@
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="65.0" prefWidth="240.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER" textFill="#46252a" wrapText="true">
+            <Button alignment="CENTER" focusTraversable="false" layoutX="10.0" layoutY="79.0" mnemonicParsing="false" onAction="#switchToBorrowingArrow" prefHeight="65.0" prefWidth="215.0" text="Borrowing Arrows with &#10;Straw Boats" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="65.0" prefWidth="240.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER" textFill="#46252a">
+            <Button focusTraversable="false" layoutX="10.0" layoutY="148.0" mnemonicParsing="false" onAction="#switchToEnemyFortress" prefHeight="65.0" prefWidth="215.0" text="Enemy Fortress Attack &#10;" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="65.0" prefWidth="240.0" text="Food Harvesting" textFill="#46252a">
+            <Button focusTraversable="false" layoutX="10.0" layoutY="217.0" mnemonicParsing="false" onAction="#switchToFood" prefHeight="65.0" prefWidth="215.0" text="Food Harvesting" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="65.0" prefWidth="240.0" text="Text Converter" textFill="#46252a">
+            <Button defaultButton="true" focusTraversable="false" layoutX="10.0" layoutY="286.0" mnemonicParsing="false" onAction="#switchToTextConverter" prefHeight="65.0" prefWidth="215.0" text="Text Converter" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="65.0" prefWidth="240.0" text="Red Cliff on Fire" textFill="#46252a">
+            <Button focusTraversable="false" layoutX="10.0" layoutY="355.0" mnemonicParsing="false" onAction="#switchToRedCliff" prefHeight="65.0" prefWidth="215.0" text="Red Cliff on Fire" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="65.0" prefWidth="240.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER" textFill="#46252a">
+            <Button focusTraversable="false" layoutX="10.0" layoutY="424.0" mnemonicParsing="false" onAction="#switchToEngaging" prefHeight="65.0" prefWidth="215.0" text="Engaging Cao Cao at &#10;Hua Rong Road" textAlignment="CENTER" textFill="#46252a">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
          </children>
       </VBox>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="980.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="650.0" prefWidth="980.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="title" prefHeight="65.0" prefWidth="980.0" text="Text Converter" textFill="#46252a" AnchorPane.leftAnchor="0.0">
                <font>
-                  <Font name="System Bold" size="30.0" />
+                  <Font name="Gill Sans Ultra Bold" size="30.0" />
                </font>
                <padding>
                   <Insets bottom="20.0" right="10.0" top="20.0" />
@@ -76,30 +76,30 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextArea fx:id="inputTextArea" layoutX="262.0" layoutY="72.0" prefHeight="200.0" prefWidth="651.0" promptText="Enter your text here." wrapText="true" AnchorPane.leftAnchor="270.0">
+            <TextArea fx:id="inputTextArea" layoutX="262.0" layoutY="72.0" prefHeight="150.0" prefWidth="651.0" promptText="Enter your text here." wrapText="true" AnchorPane.leftAnchor="270.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextArea>
-            <Label fx:id="shiftValueLabel" alignment="CENTER_RIGHT" layoutY="302.0" prefHeight="27.0" prefWidth="255.0" text="Shift value:" textFill="#46252a" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="302.0">
+            <Label fx:id="shiftValueLabel" alignment="CENTER_RIGHT" layoutX="10.0" layoutY="268.0" prefHeight="27.0" prefWidth="255.0" text="Shift value:" textFill="#46252a" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="268.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="shiftValueTextField" layoutX="262.0" layoutY="297.0" prefHeight="35.0" prefWidth="467.0" promptText="1-25" AnchorPane.leftAnchor="270.0" AnchorPane.topAnchor="297.0">
+            <TextField fx:id="shiftValueTextField" layoutX="270.0" layoutY="262.0" prefHeight="35.0" prefWidth="467.0" promptText="1-25" AnchorPane.leftAnchor="270.0" AnchorPane.topAnchor="262.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </TextField>
-            <ChoiceBox fx:id="operationChoiceBox" layoutX="262.0" layoutY="358.0" prefHeight="35.0" prefWidth="170.0" AnchorPane.leftAnchor="270.0" AnchorPane.topAnchor="358.0" />
-            <Label fx:id="operationChoiceLabel" alignment="CENTER_RIGHT" layoutY="361.0" prefHeight="27.0" prefWidth="255.0" text="Operation choice:" textFill="#46252a" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="361.0">
+            <ChoiceBox fx:id="operationChoiceBox" layoutX="270.0" layoutY="343.0" prefHeight="35.0" prefWidth="170.0" AnchorPane.leftAnchor="270.0" AnchorPane.topAnchor="343.0" />
+            <Label fx:id="operationChoiceLabel" alignment="CENTER_RIGHT" layoutX="10.0" layoutY="347.0" prefHeight="27.0" prefWidth="255.0" text="Operation choice:" textFill="#46252a" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="347.0">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button fx:id="convertButton" layoutX="780.0" layoutY="375.0" mnemonicParsing="false" onAction="#convert" prefHeight="72.0" prefWidth="180.0" text="Convert" AnchorPane.rightAnchor="20.0">
+            <Button fx:id="convertButton" layoutX="834.0" layoutY="392.0" mnemonicParsing="false" onAction="#convert" prefHeight="60.0" prefWidth="125.0" text="Convert" AnchorPane.rightAnchor="20.66666666666663">
                <font>
-                  <Font name="System Bold" size="24.0" />
+                  <Font name="Dosis ExtraBold" size="24.0" />
                </font>
             </Button>
             <RadioButton fx:id="securedModeRButton" layoutX="144.0" layoutY="412.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="27.0" prefWidth="143.0" text="Secured:" textFill="#46252a" AnchorPane.leftAnchor="154.0" AnchorPane.topAnchor="412.0">
@@ -107,8 +107,8 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </RadioButton>
-            <Separator layoutY="457.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="980.0" AnchorPane.leftAnchor="0.0" />
-            <TextArea fx:id="convertedTextCopiableLabel" editable="false" layoutX="14.0" layoutY="466.0" opacity="0.5" prefHeight="212.0" prefWidth="940.0" promptText="Converted text." stylesheets="@style.css" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+            <Separator layoutY="448.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="980.0" AnchorPane.leftAnchor="0.0" />
+            <TextArea fx:id="convertedTextCopiableLabel" editable="false" layoutX="16.0" layoutY="466.0" opacity="0.5" prefHeight="162.0" prefWidth="944.0" promptText="Converted text." stylesheets="@style.css" wrapText="true" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="16.0" AnchorPane.rightAnchor="20.0">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
