--- a/demo/src/main/resources/com/assignment/hierarchyScene.fxml
+++ b/demo/src/main/resources/com/assignment/hierarchyScene.fxml
@@ -19,7 +19,7 @@
                   <Insets bottom="20.0" right="10.0" top="20.0" />
                </padding>
             </Label>
-            <Button layoutX="290.0" layoutY="260.0" mnemonicParsing="false" onAction="#printHierarchy" prefHeight="150.0" prefWidth="350.0" text="Generate Hierarchy" textFill="#46252a">
+            <Button fx:id="generateButton" layoutX="290.0" layoutY="260.0" mnemonicParsing="false" onAction="#printHierarchy" prefHeight="150.0" prefWidth="350.0" text="Generate Hierarchy" textFill="#46252a">
                <font>
                   <Font name="Dosis ExtraBold" size="32.0" />
                </font>
