--- a/demo/src/main/resources/com/assignment/soldierArrangement.fxml
+++ b/demo/src/main/resources/com/assignment/soldierArrangement.fxml
@@ -52,7 +52,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button layoutX="757.0" layoutY="544.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="60.0" prefWidth="120.0" text="Submit" textFill="#46252a" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="23.0">
+            <Button fx:id="submitButton" layoutX="757.0" layoutY="544.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#submit" prefHeight="60.0" prefWidth="120.0" text="Submit" textFill="#46252a" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="23.0">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
